--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
 <body>
 	<div id="gameContainer">
 		<canvas id="unity-canvas" data-pixel-art=""></canvas>
-		<script src="Build/tower.loader.js"></script>
+		<script src="Build/Stack.loader.js"></script>
 		<script>
 			var canvas = document.querySelector("#unity-canvas");
 			var config = {
-				dataUrl: "Build/tower.data",
-				frameworkUrl: "Build/tower.framework.js",
-				codeUrl: "Build/tower.wasm",
+				dataUrl: "Build/Stack.data",
+				frameworkUrl: "Build/Stack.framework.js",
+				codeUrl: "Build/Stack.wasm",
 				streamingAssetsUrl: "StreamingAssets",
 				companyName: "InnovDev",
 				productName: "Hexagon Stack",
