--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
 <body>
 	<div id="gameContainer">
 		<canvas id="unity-canvas" data-pixel-art=""></canvas>
-		<script src="Build/HexaStack.loader.js"></script>
+		<script src="Build/Hexa.loader.js"></script>
 		<script>
 			var canvas = document.querySelector("#unity-canvas");
 			var config = {
-				dataUrl: "Build/HexaStack.data",
-				frameworkUrl: "Build/HexaStack.framework.js",
-				codeUrl: "Build/HexaStack.wasm",
+				dataUrl: "Build/Hexa.data",
+				frameworkUrl: "Build/Hexa.framework.js",
+				codeUrl: "Build/Hexa.wasm",
 				streamingAssetsUrl: "StreamingAssets",
 				companyName: "InnovDev",
 				productName: "Hexagon Stack",
