--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Hexagon Stack</title>
+    <title>Unity WebGL Player | WebLoadingTest</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -58,9 +58,9 @@
         frameworkUrl: buildUrl + "/Stack_ChainSafe.framework.js",
         codeUrl: buildUrl + "/Stack_ChainSafe.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "InnovDev",
-        productName: "Hexagon Stack",
-        productVersion: "1.0",
+        companyName: "JohannesDeml",
+        productName: "WebLoadingTest",
+        productVersion: "1.0.0",
         //showBanner: unityShowBanner,
       };
 
@@ -81,7 +81,6 @@
         canvas.style.width = "600px";
         canvas.style.height = "960px";
       }
-      canvas.style.background = "url('" + buildUrl + "/Stack_ChainSafe.jpg') center / cover";
       loadingBar.style.display = "block";
 	  
 	  var scaleToFit;
