--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
         </div>
 
         <audio id="music" src="sound/bensound-dreams.mp3" preload="auto" loop></audio>
-    </div>    
+    </div>
+    <footer style="position:fixed;bottom:1em;left:1em;font-size:12px">Music : <a
+            href="https://www.bensound.com/royalty-free-music/track/dreams-chill-out">Royalty Free Music from
+            Bensound</a></footer>
     <script type="text/babel">
 
         // Table Header w/ Buttons for recent/alltime
