--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <div id="instructions">Click (or press the spacebar) to place the block</div>
         <div class="game-rank">
             <div id="leaderboard"></div>
+            <button id="back-button">Back</button>
         </div>
         <div class="game-over">
             <h2>Game Over</h2>
@@ -41,9 +42,6 @@
 
         <audio id="music" src="sound/bensound-dreams.mp3" preload="auto" loop></audio>
     </div>
-    <footer style="position:fixed;bottom:1em;left:1em;font-size:12px">Music : <a
-            href="https://www.bensound.com/royalty-free-music/track/dreams-chill-out">Royalty Free Music from
-            Bensound</a></footer>
     <script type="text/babel">
 
         // Table Header w/ Buttons for recent/alltime
